--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500&family=Trispace:wght@300;500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>tpadilla.com</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
