--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web-Development portfolio for Trin Padilla"
+    />
+    <meta property="url" content="http://tpadilla.com"/>
+    <meta property="og:image" content="/preview.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500&family=Trispace:wght@300;500&display=swap" rel="stylesheet">
