--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" sizes="32x32" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" sizes="16x16" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Trin Padilla | Fullstack UX Engineer</title>
     <meta
       name="description"
-      content="Web-Development portfolio for Trin Padilla"
+      content="Web-Development portfolio for Trin Padilla, Fullstack UX Engineer in Training"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta property="og:url" content="https://tpadilla.com"/>
+    <meta property="og:title" content="Trin Padilla | Fullstack UX Engineer"/>
+    <meta property="og:description" content="Web-Development portfolio for Trin Padilla, Fullstack UX Engineer in Training"/>
     <meta property="url" content="http://tpadilla.com"/>
     <meta property="og:image" content="/preview.png" />
+    <meta property="og:image:height" content="1260" />
+    <meta property="og:image:width" content="2400" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500&family=Trispace:wght@300;500&display=swap" rel="stylesheet">
@@ -20,7 +28,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Otomanopee+One&display=swap" rel="stylesheet">
-    <title>tpadilla.com</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
